RESOLVED FIXED290448
REGRESSION(290095@main): ARM NEON debug compilation fails
https://bugs.webkit.org/show_bug.cgi?id=290448
Summary REGRESSION(290095@main): ARM NEON debug compilation fails
Alejandro G. Castro
Reported 2025-03-26 04:34:36 PDT
Another missing update of the m_effect member usage after the modification.
Attachments
Alejandro G. Castro
Comment 1 2025-03-26 04:37:53 PDT
EWS
Comment 2 2025-03-26 08:16:52 PDT
Committed 292702@main (6df758fdc9b0): <https://commits.webkit.org/292702@main> Reviewed commits have been landed. Closing PR #43036 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.