REGRESSION(290095@main): ARM NEON debug compilation fails https://bugs.webkit.org/show_bug.cgi?id=290448

Reviewed by Michael Catanzaro, Carlos Alberto Lopez Perez, and Adrian Perez de Castro.

Another missing update of the m_effect member usage after the modification.

* Source/WebCore/platform/graphics/cpu/arm/filters/FECompositeNeonArithmeticApplier.cpp:
(WebCore::FECompositeNeonArithmeticApplier::FECompositeNeonArithmeticApplier):

Canonical link: https://commits.webkit.org/292702@main